[package]
name = "concrete-boolean"
version = "0.1.1"
edition = "2018"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Homomorphic Boolean circuit interface for the concrete FHE library."
homepage = "https://crates.io/crates/concrete"
documentation = "https://docs.zama.ai/concrete/boolean-lib"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#concrete-core = {path="../concrete-core", features=["multithread"]}
concrete-core = {path="../concrete-core"}
concrete-commons = {path="../concrete-commons"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.41"
#rand = "0.6"
rand = { version = "0.6.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.83"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[lib]
crate-type = ["cdylib", "rlib"]
name="concrete_boolean"
